--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,7 +293,7 @@ h1 {
         height: 50px;
     }
 
-
+}
 
 @media screen and (max-width: 500px) {
 
@@ -301,7 +301,5 @@ h1 {
     .film {
         grid-template-columns: 1fr;
     }
-
-    
-
+   
 }
