--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ a {
 }
 
 a:hover {
-    opacity: 0.6;
+    opacity: 0.8;
 }
 
  ul {
@@ -102,14 +102,13 @@ h1 {
 .my-info {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
-    justify-content: space-around;
+    justify-content: space-between;
+    grid-gap: 10px;
 }
 
 .my-info img {
     width: 100%;
-    margin-right: 40px;
-    max-height: 300px;
+    max-height:450px;
    
 }
 
@@ -141,6 +140,7 @@ h1 {
 .work h3 {
     font-style: italic;
     padding: 10px;
+    text-decoration: underline;
 }
 
 .sites {
@@ -249,6 +249,10 @@ h1 {
     height: 30px;
 }
 
+.write a:hover {
+    border-bottom: 2px solid #262626;
+}
+
 /* Footer styles start */
 .footer {
     padding: 30px;
@@ -297,9 +301,8 @@ h1 {
 
 @media screen and (max-width: 500px) {
 
-
     .film {
         grid-template-columns: 1fr;
     }
-   
+
 }
