--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
     line-height: 1.5;
 }
 
-/* <a> Element style */
+
 a {
     color: black;
     text-decoration: none;
@@ -40,6 +40,7 @@ h1 {
     margin: auto;
 }
 
+/* NAVIGATION STYLES START */
 .nav-links {
     display: flex;
     align-items: center;
@@ -75,7 +76,9 @@ h1 {
     flex: 1;
     margin-left: 20px;
 }
+/* NAVIGATION STYLES END */
 
+/* HERO STYLES START */
 .intro {
     width: 100%;
     height: 400px;
@@ -98,6 +101,9 @@ h1 {
     color: orangered;
     margin-bottom: 5px;
 }
+/* HERO STYLES END */
+
+/* ABOUT ME SECTION STYLES START */
 
 .my-info {
     display: grid;
@@ -126,6 +132,9 @@ h1 {
     color: #262626;
     line-height: 1em;
 }
+/* ABOUT ME SECTION STYLES END */
+
+/* WORK SECTION STYLES START */
 .work {
     text-transform: uppercase;
     text-align: center;
@@ -143,6 +152,9 @@ h1 {
     text-decoration: underline;
 }
 
+/* WORK SECTION STYLES END */
+
+/* WEBSITE SECTION STYLES START */
 .sites {
     display: grid;
     grid-template-columns: 1fr 9fr 1fr;
@@ -167,14 +179,16 @@ h1 {
     text-transform: none;
 }
 
-.work-img.work-1 {
+.sites-img.work-1 {
     grid-column: 2/ span 1;
 }
 
-.work-img {
+.sites-img {
     margin-bottom: 20px;
 }
+/* END OF WEBSITE SECTION STYLES */
 
+/* PHOTOGRAPHY SECTION SYLES START */
 
 .tokyo-photos {
     display: grid;
@@ -209,6 +223,11 @@ h1 {
 .film a {
     color: #fff;
 }
+
+/* END OF PHOTOGRAPHY SECTION STYLES */
+
+
+/* CONNECT SECTION STYLES */
 
 .contact-info {
     text-align: center;
@@ -252,6 +271,8 @@ h1 {
 .write a:hover {
     border-bottom: 2px solid #262626;
 }
+/* END OF CONNECT SECTION STYLES */
+
 
 /* Footer styles start */
 .footer {
@@ -265,7 +286,10 @@ h1 {
 }
 /* Footer styles end */
 
-@media screen and (max-width: 700px) {
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width: 768px) {
+
     .my-info {
         grid-template-columns: 1fr;
     }
@@ -303,11 +327,11 @@ h1 {
 
 }
 
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
 @media screen and (max-width: 575px) {
 
     .film {
         grid-template-columns: 1fr;
     }
-
-
+    
 }
