--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 /* Body style */
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background: orangered;
+    background: #ffe2c8;
     color: #262626;
     font-size: 15px;
     line-height: 1.5;
@@ -32,6 +32,9 @@ a:hover {
 h1 {
     font-size: 30px;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+}
+img {
+    border-radius: .5rem;
 }
 
 .content {
@@ -84,6 +87,7 @@ h1 {
     height: 400px;
     background: url('../images/bodegabay.JPG')
     no-repeat center center/cover;
+    border-radius: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -98,13 +102,12 @@ h1 {
 }
 
 .intro h2, .intro p {
-    color: orangered;
+    color: #ffe2c8;
     margin-bottom: 5px;
 }
 /* HERO STYLES END */
 
 /* ABOUT ME SECTION STYLES START */
-
 .my-info {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -120,16 +123,20 @@ h1 {
 
 .my-bit {
     font-weight: bold;
+    position: absolute;
+    bottom: 20%;
+    left: 50%;
+    padding-right: 10rem;
 }
 
 .my-bit h3 {
     font-size: 40px;
-    color: white;
+    color:black;
 }
 
 .my-bit p {
     font-size: 20px;
-    color: #262626;
+    color: darkolivegreen;
     line-height: 1em;
 }
 /* ABOUT ME SECTION STYLES END */
@@ -142,45 +149,45 @@ h1 {
 }
 
 .work h2 {
-    color: #fff;
+    color: black;
     font-weight: bold;
 }
 
 .work h3 {
-    font-style: italic;
+    
+    font-size: 22px;
     padding: 10px;
     text-decoration: underline;
 }
 
+.work p {
+    color: darkolivegreen;
+}
 /* WORK SECTION STYLES END */
 
 /* WEBSITE SECTION STYLES START */
 .sites {
     display: grid;
-    grid-template-columns: 1fr 9fr 1fr;
-    grid-gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
 }
 
 .sites img {
     width: 100%;
     max-height: 500px;
     justify-content: space-around;
-    border: 4px solid #262626;
+    border: 2px solid #262626;
     border-radius: 2em;
 }
 
 .sites a {
     font-size: 18px;
-    color: #fff;
+    color: black;
     font-variant: uppercase;
 }
 
 .sites p {
     text-transform: none;
-}
-
-.sites-img.work-1 {
-    grid-column: 2/ span 1;
 }
 
 .sites-img {
@@ -202,7 +209,7 @@ h1 {
 }
 
 .tokyo-photos a {
-    color: #fff;
+    color: ;
 }
 
 .tokyo-photos p {
@@ -220,10 +227,6 @@ h1 {
     border: 2px solid #262626;
 }
 
-.film a {
-    color: #fff;
-}
-
 /* END OF PHOTOGRAPHY SECTION STYLES */
 
 
@@ -235,6 +238,7 @@ h1 {
     padding: 20px 0;
     font-size: 13px;
     background-color: darkgrey;
+    opacity:  .5;
     border-radius: 2em;;
     justify-content: center;
     align-items: center;
@@ -333,5 +337,5 @@ h1 {
     .film {
         grid-template-columns: 1fr;
     }
-    
+
 }
